viernes rev 1 - implementado estado de pedidos via ws

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -163,6 +163,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
+    <Compile Include="Web References\VerEstadoPedidoWS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
     <Compile Include="_auditor\Auditor.cs" />
     <Compile Include="forms\frmReporte.cs">
       <SubType>Form</SubType>
@@ -204,8 +209,9 @@
     </Compile>
     <Compile Include="util\ListViewItemComparer.cs" />
     <Compile Include="util\singleton.cs" />
-    <Compile Include="_clientesNovedades\ClientesNovedades.cs" />
-    <Compile Include="_clientesNovedades\EnvioClientesNovedades.cs" />
+    <Compile Include="_clientesNovedades\EnvioClientesNovedades.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="_devoluciones\Devolucion.cs" />
     <Compile Include="_devoluciones\DevolucionItem.cs" />
     <Compile Include="_devoluciones\ucDevolucion.cs">
@@ -298,8 +304,10 @@
       <DependentUpon>ucTips.cs</DependentUpon>
     </Compile>
     <Compile Include="_novedades\UpdateNovedades.cs" />
+    <Compile Include="_pedidos\EstadoPedido.cs" />
     <Compile Include="_pedidos\Pedido.cs" />
     <Compile Include="_pedidos\PedidoItem.cs" />
+    <Compile Include="_pedidos\VerEstado.cs" />
     <Compile Include="_preferencias\CheckBoxINI.xaml.cs">
       <DependentUpon>CheckBoxINI.xaml</DependentUpon>
     </Compile>
@@ -606,6 +614,11 @@
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <None Include="Web References\VerEstadoPedidoWS\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\VerEstadoPedidoWS\VerEstadoPedido.wsdl" />
     <None Include="Web References\VerExistenciaWS\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
@@ -778,6 +791,17 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_UpdateClientesWS_UpdateClientes</CachedSettingsPropName>
     </WebReferenceUrl>
+    <WebReferenceUrl Include="http://190.3.78.12/wsOracle/VerEstadoPedido.asmx%3fwsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\VerEstadoPedidoWS\</RelPath>
+      <UpdateFromURL>http://190.3.78.12/wsOracle/VerEstadoPedido.asmx%3fwsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Catalogo_VerEstadoPedidoWS_VerEstadoPedido</CachedSettingsPropName>
+    </WebReferenceUrl>
     <WebReferenceUrl Include="http://190.3.78.12/wsOracle/VerExistencia.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\VerExistenciaWS\</RelPath>
@@ -833,6 +857,7 @@
     <Resource Include="recursos\icnLinkedin.png" />
     <Resource Include="recursos\icnFacebook.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
