--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -46,6 +46,9 @@
                 serializeAs="String">
                 <value>http://190.3.78.12/wscatalogo4/catalogonovedades.asmx</value>
             </setting>
+            <setting name="Catalogo_VerEstadoPedidoWS_VerEstadoPedido" serializeAs="String">
+                <value>http://190.3.78.12/wsOracle/VerEstadoPedido.asmx</value>
+            </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
 <startup>
