Implementacion parcial de ucVisitas. Esta parcialmente implementado el envio de la visita, pero falta definir el web service y por ende, los datos que envia.

--- a/ANSv4_r1/Catalogo4/Catalogo4.csproj
+++ b/ANSv4_r1/Catalogo4/Catalogo4.csproj
@@ -257,6 +257,7 @@
     <Compile Include="_auditor\Auditor.cs" />
     <Compile Include="_auditor\EnvioAuditoria.cs" />
     <Compile Include="_clientesNovedades\EnvioClientesNovedades.cs" />
+    <Compile Include="_clientesNovedades\EnvioVisitasClientes.cs" />
     <Compile Include="_clientes\UpdateClientes.cs" />
     <Compile Include="_devoluciones\Devolucion.cs" />
     <Compile Include="_devoluciones\DevolucionItem.cs" />
