--- a/ANSv4_r1/Catalogo4/app.config
+++ b/ANSv4_r1/Catalogo4/app.config
@@ -48,6 +48,9 @@
                 serializeAs="String">
                 <value>http://190.3.78.12/wscatalogo4/clientesnovedades.asmx</value>
             </setting>
+            <setting name="Catalogo_ClientesVisitasWS_ClientesVisitas" serializeAs="String">
+                <value>http://190.3.78.12/wscatalogo4/clientesvisitas.asmx</value>
+            </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
 </configuration>
